@@ -16,17 +16,23 @@
 
 package com.palantir.baseline
 
-import nebula.test.IntegrationSpec
-import nebula.test.functional.ExecutionResult
-
 import java.nio.file.Files
 import java.nio.file.Path
 import java.nio.file.Paths
+import nebula.test.IntegrationSpec
+import nebula.test.functional.ExecutionResult
+import org.assertj.core.api.Assumptions
 
+/**
+ * This test exercises both the root-plugin {@code BaselineJavaVersions} AND the subproject
+ * specific plugin, {@code BaselineJavaVersion}.
+ */
 class BaselineJavaVersionIntegrationTest extends IntegrationSpec {
     private static final int JAVA_8_BYTECODE = 52
     private static final int JAVA_11_BYTECODE = 55
     private static final int JAVA_17_BYTECODE = 61
+    private static final int ENABLE_PREVIEW_BYTECODE = 65535
+    private static final int NOT_ENABLE_PREVIEW_BYTECODE = 0
 
     def standardBuildFile = '''
         buildscript {
@@ -72,6 +78,21 @@ class BaselineJavaVersionIntegrationTest extends IntegrationSpec {
         }
         '''.stripIndent(true)
 
+    def java17PreviewCode = '''
+        public class Main {
+            sealed interface MyUnion {
+                record Foo(int number) implements MyUnion {}
+            }
+        
+            public static void main(String[] args) {
+                MyUnion myUnion = new MyUnion.Foo(1234);
+                switch (myUnion) {
+                    case MyUnion.Foo foo -> System.out.println("Java 17 pattern matching switch: " + foo.number);
+                }
+            }
+        }
+        '''
+
     def setup() {
         // Fork needed or build fails on circleci with "SystemInfo is not supported on this operating system."
         // Comment out locally in order to get debugging to work
@@ -107,7 +128,37 @@ class BaselineJavaVersionIntegrationTest extends IntegrationSpec {
 
         then:
         runTasksSuccessfully('compileJava')
-        getBytecodeVersion(compiledClass) == JAVA_17_BYTECODE
+        assertBytecodeVersion(compiledClass, JAVA_17_BYTECODE, NOT_ENABLE_PREVIEW_BYTECODE)
+    }
+
+    def 'java 17 preview compilation works'() {
+        when:
+        buildFile << '''
+        javaVersions {
+            libraryTarget = 11
+            distributionTarget = '17_PREVIEW'
+        }
+        '''.stripIndent(true)
+        file('src/main/java/Main.java') << java17PreviewCode
+        File compiledClass = new File(projectDir, "build/classes/java/main/Main.class")
+
+        then:
+        runTasksSuccessfully('compileJava', '-i')
+        assertBytecodeVersion(compiledClass, JAVA_17_BYTECODE, ENABLE_PREVIEW_BYTECODE)
+    }
+
+    def 'java 17 preview javadoc works'() {
+        when:
+        buildFile << '''
+        javaVersions {
+            libraryTarget = 11
+            distributionTarget = '17_PREVIEW'
+        }
+        '''.stripIndent(true)
+        file('src/main/java/Main.java') << java17PreviewCode
+
+        then:
+        runTasksSuccessfully('javadoc', '-i')
     }
 
     def 'library target is used when no artifacts are published but project is overridden as a library'() {
@@ -126,7 +177,7 @@ class BaselineJavaVersionIntegrationTest extends IntegrationSpec {
 
         then:
         runTasksSuccessfully('compileJava')
-        getBytecodeVersion(compiledClass) == JAVA_11_BYTECODE
+        assertBytecodeVersion(compiledClass, JAVA_11_BYTECODE, NOT_ENABLE_PREVIEW_BYTECODE)
     }
 
     def 'library target is used when nebula maven publishing plugin is applied'() {
@@ -143,7 +194,7 @@ class BaselineJavaVersionIntegrationTest extends IntegrationSpec {
 
         then:
         runTasksSuccessfully('compileJava')
-        getBytecodeVersion(compiledClass) == JAVA_11_BYTECODE
+        assertBytecodeVersion(compiledClass, JAVA_11_BYTECODE, NOT_ENABLE_PREVIEW_BYTECODE)
     }
 
     def 'library target is used when the palantir shadowjar plugin is applied'() {
@@ -162,7 +213,7 @@ class BaselineJavaVersionIntegrationTest extends IntegrationSpec {
         then:
         runTasksSuccessfully('--write-locks')
         runTasksSuccessfully('compileJava')
-        getBytecodeVersion(compiledClass) == JAVA_11_BYTECODE
+        assertBytecodeVersion(compiledClass, JAVA_11_BYTECODE, NOT_ENABLE_PREVIEW_BYTECODE)
     }
 
     def 'java 11 compilation succeeds targeting java 11'() {
@@ -177,7 +228,7 @@ class BaselineJavaVersionIntegrationTest extends IntegrationSpec {
 
         then:
         runTasksSuccessfully('compileJava')
-        getBytecodeVersion(compiledClass) == JAVA_11_BYTECODE
+        assertBytecodeVersion(compiledClass, JAVA_11_BYTECODE, NOT_ENABLE_PREVIEW_BYTECODE)
     }
 
     def 'java 11 execution succeeds on java 11'() {
@@ -193,7 +244,7 @@ class BaselineJavaVersionIntegrationTest extends IntegrationSpec {
         then:
         ExecutionResult result = runTasksSuccessfully('run')
         result.standardOutput.contains 'jdk11 features on runtime 11'
-        getBytecodeVersion(compiledClass) == JAVA_11_BYTECODE
+        assertBytecodeVersion(compiledClass, JAVA_11_BYTECODE, NOT_ENABLE_PREVIEW_BYTECODE)
     }
 
     def 'java 11 execution succeeds on java 17'() {
@@ -210,10 +261,13 @@ class BaselineJavaVersionIntegrationTest extends IntegrationSpec {
         then:
         ExecutionResult result = runTasksSuccessfully('run')
         result.standardOutput.contains 'jdk11 features on runtime 17'
-        getBytecodeVersion(compiledClass) == JAVA_11_BYTECODE
+        assertBytecodeVersion(compiledClass, JAVA_11_BYTECODE, NOT_ENABLE_PREVIEW_BYTECODE)
     }
 
     def 'java 8 execution succeeds on java 8'() {
+        Assumptions.assumeThat(System.getProperty("os.arch")).describedAs(
+                "On an M1 mac, this test will fail to download https://api.adoptopenjdk.net/v3/binary/latest/8/ga/mac/aarch64/jdk/hotspot/normal/adoptopenjdk")
+                .isNotEqualTo("aarch64");
         when:
         buildFile << '''
         javaVersions {
@@ -228,6 +282,10 @@ class BaselineJavaVersionIntegrationTest extends IntegrationSpec {
     }
 
     def 'java 8 execution succeeds on java 11'() {
+        Assumptions.assumeThat(System.getProperty("os.arch")).describedAs(
+                "On an M1 mac, this test will fail to download https://api.adoptopenjdk.net/v3/binary/latest/8/ga/mac/aarch64/jdk/hotspot/normal/adoptopenjdk")
+                .isNotEqualTo("aarch64");
+
         when:
         buildFile << '''
         javaVersions {
@@ -241,7 +299,7 @@ class BaselineJavaVersionIntegrationTest extends IntegrationSpec {
         then:
         ExecutionResult result = runTasksSuccessfully('run')
         result.standardOutput.contains 'jdk8 features on runtime 11'
-        getBytecodeVersion(compiledClass) == JAVA_8_BYTECODE
+        assertBytecodeVersion(compiledClass, JAVA_8_BYTECODE, NOT_ENABLE_PREVIEW_BYTECODE)
     }
 
     def 'JavaPluginConvention.getTargetCompatibility() produces the runtime java version'() {
@@ -279,6 +337,34 @@ class BaselineJavaVersionIntegrationTest extends IntegrationSpec {
         result.standardError.contains 'The requested compilation target'
     }
 
+    def 'verification should fail when --enable-preview is on, but versions differ'() {
+        when:
+        buildFile << '''
+        javaVersions {
+            distributionTarget = '11_PREVIEW'
+            runtime = '15_PREVIEW'
+        }
+        '''.stripIndent(true)
+
+        then:
+        ExecutionResult result = runTasksWithFailure('checkJavaVersions')
+        result.standardError.contains 'Runtime Java version (15_PREVIEW) must be exactly the same as the compilation target (11_PREVIEW)'
+    }
+
+    def 'verification should fail when runtime does not use --enable-preview but compilation does'() {
+        when:
+        buildFile << '''
+        javaVersions {
+            distributionTarget = '17_PREVIEW'
+            runtime = '17'
+        }
+        '''.stripIndent(true)
+
+        then:
+        ExecutionResult result = runTasksWithFailure('checkJavaVersions')
+        result.standardError.contains 'Runtime Java version (17) must be exactly the same as the compilation target (17_PREVIEW)'
+    }
+
     def 'verification should succeed when target and runtime versions match'() {
         when:
         buildFile << '''
@@ -293,6 +379,9 @@ class BaselineJavaVersionIntegrationTest extends IntegrationSpec {
     }
 
     def 'can configure a jdk path to be used'() {
+        Assumptions.assumeThat(System.getenv("CI")).describedAs(
+                "This test deletes a directory locally, you don't want to run it on your mac").isNotNull();
+
         Path newJavaHome = Files.createSymbolicLink(
                 projectDir.toPath().resolve("jdk"),
                 Paths.get(System.getProperty("java.home")))
@@ -339,16 +428,19 @@ class BaselineJavaVersionIntegrationTest extends IntegrationSpec {
     private static final int BYTECODE_IDENTIFIER = (int) 0xCAFEBABE
 
     // See http://illegalargumentexception.blogspot.com/2009/07/java-finding-class-versions.html
-    private static int getBytecodeVersion(File file) {
+    private static void assertBytecodeVersion(File file, int expectedMajorBytecodeVersion,
+                                              int expectedMinorBytecodeVersion) {
         try (InputStream stream = new FileInputStream(file)
              DataInputStream dis = new DataInputStream(stream)) {
             int magic = dis.readInt()
             if (magic != BYTECODE_IDENTIFIER) {
                 throw new IllegalArgumentException("File " + file + " does not appear to be java bytecode")
             }
-            // skip the minor version
-            dis.readShort()
-            return 0xFFFF & dis.readShort()
+            int minorBytecodeVersion = 0xFFFF & dis.readShort()
+            int majorBytecodeVersion = 0xFFFF & dis.readShort()
+
+            majorBytecodeVersion == expectedMajorBytecodeVersion
+            minorBytecodeVersion == expectedMinorBytecodeVersion
         }
     }
 }
